Fix gap between buttons

--- a/packages/js/product-editor/src/components/iframe-editor/header-toolbar/header-toolbar.scss
+++ b/packages/js/product-editor/src/components/iframe-editor/header-toolbar/header-toolbar.scss
@@ -36,11 +36,14 @@
 		align-items: center;
 		> .components-dropdown-menu {
 			margin-right: $gap-small;
+			width: 48px;
 			> button.components-dropdown-menu__toggle {
-				min-width: 32px !important;
-				padding-left: 0 !important;
-				padding-right: 0 !important;
+				padding: $gap-smaller !important;
+				margin-right: -8px;
 			}
+		}
+		> .woocommerce-show-block-inspector-panel {
+			margin-right: -$gap-smaller;
 		}
 		button.woocommerce-modal-actions__done-button,
 		button.woocommerce-modal-actions__cancel-button {
